--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
    
    
     <div id="root"></div>
+    <div id="modals"></div>
    
     
     <script src="js/bootstrap.bundle.min.js" ></script>
